fixed spacing issues

--- a/css/style.production.css
+++ b/css/style.production.css
@@ -56,20 +56,24 @@ button {
   display: inline-block;
   margin: 0 auto;
   padding: 20px 30px;
-  margin: 5px auto;
   padding: 10px;
   text-align: center;
+
   /* takes the font from the outer container */
   font-family: inherit;
+
   /* styles the background color, font color, and text decoration (underline, etc.) of the button */
   background-color: #d66d16;
   color: white !important;
   text-decoration: none;
-  /*adds spacing to the button */
+
+  /* adds spacing to the button */
   border-radius: 3px;
+
   /* gives the button a bottom border with a width of 2px, a type of solid, and a color in RGBA format */
   border-bottom: 2px solid rgba(0, 0, 0, 0.3);
   transition: 0.2s opacity;
+
   /* transition: all 150ms ease-in-out; */
 }
 
@@ -79,20 +83,24 @@ button {
   display: inline-block;
   margin: 0 auto;
   padding: 20px 30px;
-  margin: 5px auto;
   padding: 10px;
   text-align: center;
+
   /* takes the font from the outer container */
   font-family: inherit;
+
   /* styles the background color, font color, and text decoration (underline, etc.) of the button */
   background-color: #d66d16;
   color: white !important;
   text-decoration: none;
-  /*adds spacing to the button */
+
+  /* adds spacing to the button */
   border-radius: 3px;
+
   /* gives the button a bottom border with a width of 2px, a type of solid, and a color in RGBA format */
   border-bottom: 2px solid rgba(0, 0, 0, 0.3);
   transition: 0.2s opacity;
+
   /* transition: all 150ms ease-in-out; */
 }
 
@@ -101,6 +109,7 @@ button:focus,
 .button:hover,
 .button:focus {
   cursor: pointer;
+
   /* background-color: white;
   color: #d66d16; */
   opacity: 0.8;
@@ -137,7 +146,7 @@ button:focus,
 .page-header {
   display: flex;
   width: 100%;
-  padding: 20px 20px 0px 20px;
+  padding: 20px 20px 0px;
   border-bottom: 2px solid rgba(0, 0, 0, 0.15);
 }
 
@@ -160,12 +169,13 @@ button:focus,
 }
 
 .contact-me {
-  padding: 20px 20px 0px 20px;
+  padding: 20px 20px 0px;
 }
 
 .project-section {
-  padding: 20px 20px 0px 20px;
+  padding: 20px 20px 0px;
 }
+
 .about-me-list {
   list-style-type: none;
   padding-left: 0%;
@@ -193,6 +203,7 @@ button:focus,
     min-height: auto;
     margin: 0;
   }
+
   .grid__item:last-child {
     grid-column: 3/3;
     grid-row: 1/3;
@@ -205,19 +216,23 @@ button:focus,
     grid-template-columns: 1fr;
   }
 }
+
 @media all and (min-width: 500px) and (max-width: 750px) {
   .grid {
     grid-template-columns: 1fr 1fr;
   }
 }
+
 @media all and (max-width: 750px) {
   .grid {
     grid-gap: 10px;
   }
+
   .grid__item:last-child {
     grid-column: auto / auto;
     grid-row: auto / auto;
   }
+
   h1 {
     font-size: 22px;
   }
@@ -232,9 +247,11 @@ button:focus,
   0% {
     transform: scale(1, 1);
   }
+
   50% {
     transform: scale(1.3, 1.3);
   }
+
   100% {
     transform: scale(1, 1);
   }
@@ -244,9 +261,11 @@ button:focus,
   0% {
     transform: scale(1, 1);
   }
+
   50% {
     transform: scale(1.1, 1.1);
   }
+
   100% {
     transform: scale(1, 1);
   }
